# s3-deploy-bot

./: .gitignore  Cargo.toml  README.md  config.example.toml
docs/superpowers/plans/: 2026-07-03-fast-deploy-presets.md
docs/superpowers/specs/: 2026-07-03-fast-deploy-presets-design.md
src/: auth.rs  backup.rs  bot.rs  commands.rs  config.rs  deploy.rs  fast_preset.rs  git.rs  iis.rs  job.rs  main.rs  menu.rs  msbuild.rs  runner.rs  service.rs  session.rs  staging.rs
